feat: created the internal onboard-shop api and updated the validation
