# src/routes/index.ts
@@ -6,6 +6,7 @@ import shopRouter from "./shop";
 import userRouter from "./user";
 import catalogRouter from "./catalog";
 import authRouter from "./auth";
+import internalRouter from "./internal";
 
 const router = Router();
 
@@ -15,6 +16,7 @@ router.use('/shop', shopRouter);
 router.use('/users', userRouter);
 router.use('/', catalogRouter);
 router.use('/auth', authRouter);
+router.use('/internal', internalRouter);
 
 
 export default router;
